--- a/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
+++ b/results/aHR0cHM6Ly9iZXRhLmdvdXYuZnI=/testssl.html
@@ -10,7 +10,7 @@
 <pre>
 <span style="font-weight:bold;">
 #####################################################################</span>
-  <span style="font-weight:bold;">testssl.sh</span> version <span style="font-weight:bold;">3.2rc3</span> from <a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
+  <span style="font-weight:bold;">testssl.sh</span> version <span style="font-weight:bold;">3.2rc4</span> from <a href="https://testssl.sh/dev/" style="font-weight:bold;color:black;text-decoration:none;">https://testssl.sh/dev/</a>
 <span style="font-weight:bold;">
   This program is free software. Distribution and modification under
   GPLv2 permitted. USAGE w/o ANY WARRANTY. USE IT AT YOUR OWN RISK!</span>
@@ -20,11 +20,11 @@
 #####################################################################</span>
 
   Using <i>OpenSSL 1.0.2-bad </i>  [~183 ciphers]
-  on fv-az1334-480:/home/testssl/bin/openssl.Linux.x86_64
+  on fv-az1701-141:/home/testssl/bin/openssl.Linux.x86_64
 
 <span style="font-weight:bold;">Testing all IPv4 addresses (port 443): </span>5.104.101.30 109.232.236.90
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2025-01-19 01:14:33                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2025-01-26 01:12:04                --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   109.232.236.90 
  rDNS (5.104.101.30):    ows-5-104-101-30.eu-west-2.compute.outscale.com.
@@ -89,7 +89,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
                               &quot;extended master secret/#23&quot;
 <span style="font-weight:bold;"> Session Ticket RFC 5077 hint </span>300 seconds, session tickets keys seems to be rotated &lt; daily
 <span style="font-weight:bold;"> SSL Session ID support       </span>yes
-<span style="font-weight:bold;"> Session Resumption           </span>Tickets no, ID: no
+<span style="font-weight:bold;"> Session Resumption           </span>Tickets: yes, ID: no
 <span style="font-weight:bold;"> TLS clock skew</span>               Random values, no fingerprinting possible 
 <span style="font-weight:bold;"> Certificate Compression      </span>none
 <span style="font-weight:bold;"> Client Authentication        </span>none
@@ -103,9 +103,11 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Common Name (CN)             </span><i>beta.gouv.fr </i> (CN in response to request w/o SNI: <i>*.osc-fr1.scalingo.io </i>)
 <span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>beta.gouv.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
+                              <span style="color:#a86437;">wildcard certificate</span> could be problematic, see other hosts at
+                              https://search.censys.io/search?resource=hosts&amp;virtual_hosts=INCLUDE&amp;q=C6CF3577A5A6BCA86D41B54A00222066CA08F1BE430B859C0E035EF33C23F9E9
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">84 &gt;= 30 days</span> (2025-01-13 07:35 --&gt; 2025-04-13 07:35)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">77 &gt;= 30 days</span> (2025-01-13 07:35 --&gt; 2025-04-13 07:35)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
@@ -208,10 +210,10 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2025-01-19 01:16:13 [ 105s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2025-01-26 01:13:43 [ 103s] --&gt;&gt; 5.104.101.30:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
-<span style="color:white;background-color:black;"> Start 2025-01-19 01:16:14                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Start 2025-01-26 01:13:43                --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
  Further IP addresses:   5.104.101.30 
  rDNS (109.232.236.90):  ows-109-232-236-90.eu-west-2.compute.outscale.com.
@@ -290,9 +292,11 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Common Name (CN)             </span><i>beta.gouv.fr </i> (CN in response to request w/o SNI: <i>*.osc-fr1.scalingo.io </i>)
 <span style="font-weight:bold;"> subjectAltName (SAN)         </span><i>beta.gouv.fr </i>
 <span style="font-weight:bold;"> Trust (hostname)             </span><span style="color:#008817;">Ok via SAN and CN</span> (SNI mandatory)
+                              <span style="color:#a86437;">wildcard certificate</span> could be problematic, see other hosts at
+                              https://search.censys.io/search?resource=hosts&amp;virtual_hosts=INCLUDE&amp;q=C6CF3577A5A6BCA86D41B54A00222066CA08F1BE430B859C0E035EF33C23F9E9
 <span style="font-weight:bold;"> Chain of trust</span>               <span style="color:#008817;">Ok   </span><span style="color:#cd00cd;"></span>
 <span style="font-weight:bold;"> EV cert</span> (experimental)       no 
-<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">84 &gt;= 30 days</span> (2025-01-13 07:35 --&gt; 2025-04-13 07:35)
+<span style="font-weight:bold;"> Certificate Validity (UTC)   </span><span style="color:#008817;">77 &gt;= 30 days</span> (2025-01-13 07:35 --&gt; 2025-04-13 07:35)
 <span style="font-weight:bold;"> ETS/&quot;eTLS&quot;</span>, visibility info  not present
 <span style="font-weight:bold;"> Certificate Revocation List  </span>--
 <span style="font-weight:bold;"> OCSP URI                     </span>http://r10.o.lencr.org
@@ -395,7 +399,7 @@ Hexcode  Cipher Suite Name (OpenSSL)       KeyExch.   Encryption  Bits     Ciphe
 <span style="font-weight:bold;"> Final Score                  </span>81
 <span style="font-weight:bold;"> Overall Grade                </span><span style="color:#008817;font-weight:bold;">A+</span>
 
-<span style="color:white;background-color:black;"> Done 2025-01-19 01:17:52 [ 204s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
+<span style="color:white;background-color:black;"> Done 2025-01-26 01:15:20 [ 200s] --&gt;&gt; 109.232.236.90:443 (beta.gouv.fr) &lt;&lt;--</span>
 
 -----------------------------------------------------
 <span style="font-weight:bold;">Done testing now all IP addresses (on port 443): </span>5.104.101.30 109.232.236.90
